# polygon-rs

./: .gitignore  Cargo.toml  README.md
docs/: AggResponse.md  Aggregate.md  Aggv2.md  AnalystRatings.md  Company.md  ConditionTypeMap.md  Conflict.md  CryptoApi.md  CryptoExchange.md  CryptoSnapshotAgg.md  CryptoSnapshotBookItem.md  CryptoSnapshotTicker.md  CryptoSnapshotTickerBook.md  CryptoTick.md  CryptoTickJson.md  Dividend.md  Earning.md  Error.md  Exchange.md  Financial.md  Financials.md  Forex.md  ForexAggregate.md  ForexCurrenciesApi.md  ForexSnapshotAgg.md  ForexSnapshotTicker.md  HistTrade.md  InlineResponse200.md  InlineResponse2001.md  InlineResponse20010.md  InlineResponse20011.md  InlineResponse20012.md  InlineResponse20013.md  InlineResponse20014.md  InlineResponse20015.md  InlineResponse20016.md  InlineResponse20016LastAverage.md  InlineResponse20017.md  InlineResponse20017LastAverage.md  InlineResponse20018.md  (+46 more)
src/: date_serializer.rs  datetime_serializer.rs  lib.rs
src/apis/: configuration.rs  crypto_api.rs  forex_currencies_api.rs  mod.rs  reference_api.rs  stocks_equities_api.rs
src/models/: agg_response.rs  aggregate.rs  aggv2.rs  analyst_ratings.rs  company.rs  condition_type_map.rs  conflict.rs  crypto_exchange.rs  crypto_snapshot_agg.rs  crypto_snapshot_book_item.rs  crypto_snapshot_ticker.rs  crypto_snapshot_ticker_book.rs  crypto_tick.rs  crypto_tick_json.rs  dividend.rs  earning.rs  error.rs  exchange.rs  financial.rs  financials.rs  forex.rs  forex_aggregate.rs  forex_snapshot_agg.rs  forex_snapshot_ticker.rs  hist_trade.rs  (+56 more)
